kubernetes/apps/base/vikunja/vikunja/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vikunja
    app.kubernetes.io/instance: vikunja
    app.kubernetes.io/name: vikunja
  name: vikunja
  namespace: vikunja
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vikunja
  template:
    metadata:
      labels:
        app: vikunja
        app.kubernetes.io/name: vikunja
    spec:
      nodeSelector:
        worker: "true"
      containers:
      - image: vikunja/vikunja:latest
        name: vikunja
        ports:
        - containerPort: 3456
          name: web
          protocol: TCP
        volumeMounts:
        - mountPath: "/etc/vikunja"
          readOnly: false
          name: data
          subPath: data
        - mountPath: "/app/vikunja/files"
          readOnly: false
          name: data
          subPath: files
        - mountPath: "/etc/vikunja/config.yml"
          name: vikunja-config-secret
          subPath: config.yml
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vikunja
        - name: vikunja-config-secret
          secret:
            secretName: vikunja-config-secret
