kubernetes/apps/base/vikunja/vikunja/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vikunja
  name: vikunja
  namespace: vikunja
spec:
  ports:
  - name: web-tcp
    port: 3456
    protocol: TCP
    targetPort: 3456
  selector:
    app: vikunja
