kubernetes/apps/base/vikunja/vikunja/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vikunja
  namespace: vikunja
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`todo.f9.casa`)
      kind: Rule
      services:
        - name: vikunja
          port: 3456
      middlewares:
        - name: default-headers
          namespace: default
